--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
    
 </head>
 <body>
-     <article> empezando terminal de comando</article>
+     <article> empezando terminal de comando con github</article>
 </body>
 </html>
